--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -11,7 +11,7 @@ import updateMember from '../../../members/updateMember.js'
 export function getStaticPaths() {
     return [
         {params: {username: 'adarsh'}}, 
-        // {params: {username: 'amelia'}}, 
+        {params: {username: 'amelia'}}, 
         {params: {username: 'arianna'}}, 
         {params: {username: 'beatriz'}}, 
         {params: {username: 'bridget'}}, 
