--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -8,28 +8,7 @@ import '../../styles/photos.scss'
 
 import updateMember from '../../../members/updateMember.js'
 
-var portfolios = {
-  // adarsh: await Astro.glob('../../../members/mName/portfolio/*'), 
-  // beatriz: await Astro.glob('../../../members/mName/portfolio/*'), 
-  // bridget: await Astro.glob('../../../members/mName/portfolio/*'), 
-  // cedrus: await Astro.glob('../../../members/mName/portfolio/*'), 
-  // hanlin: await Astro.glob('../../../members/mName/portfolio/*'), 
-  isabelle: await Astro.glob('../../../members/mName/portfolio/*'), 
-  // jeremy: await Astro.glob('../../../members/mName/portfolio/*'), 
-  // lorelai: await Astro.glob('../../../members/mName/portfolio/*'), 
-  // luce: await Astro.glob('../../../members/mName/portfolio/*'), 
-  // mia: await Astro.glob('../../../members/mName/portfolio/*'), 
-  maya: await Astro.glob('../../../members/mName/portfolio/*'), 
-  // miriam: await Astro.glob('../../../members/mName/portfolio/*'), 
-  // parker: await Astro.glob('../../../members/mName/portfolio/*'), 
-  // robin: await Astro.glob('../../../members/mName/portfolio/*'), 
-  // sayuri: await Astro.glob('../../../members/mName/portfolio/*'), 
-  shikha: await Astro.glob('../../../members/mName/portfolio/*'), 
-  tyler: await Astro.glob('../../../members/mName/portfolio/*'), 
-  // zach: await Astro.glob('../../../members/mName/portfolio/*'), 
-  juhi: await Astro.glob('../../../members/mName/portfolio/*'), 
-  samantha: await Astro.glob('../../../members/mName/portfolio/*'), 
-}
+var portfolios = await Astro.glob('../../../members/*/portfolio.js')
 
 export function getStaticPaths() {
     return [
@@ -74,7 +53,8 @@ var userDatas = await Astro.glob('../../../members/*/info.js')
 var userData = userDatas.find(data => data.default.name.toLowerCase().includes(username))
 
 if (userData.default) userData = userData.default
-userData = updateMember(userData, portfolios[userData.username])
+userData.portfolio = portfolios.find(p => p.username === username)
+userData = updateMember(userData)
 
 if (userData.status) {
   if (userData.status === 'activeGrad') userData.status = 'active'
