--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -49,8 +49,10 @@ import MemberPageTemplate from '../../components/memberPageTemplate.astro'
 var defaultData = await Astro.glob('../../../members/_admin/info.js')
 var userDatas = await Astro.glob('../../../members/*/info.js')
 
-console.log(userDatas)
-var userData = userDatas.find(data => data.default.name.toLowerCase().includes(username))
+var userData = userDatas.find(data => {
+  if (data.default) data = data.default
+  return data.name.toLowerCase().includes(username)
+})
 
 if (userData.default) userData = userData.default
 userData.portfolio = portfolios.find(p => p.username === username)
