--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -50,6 +50,7 @@ var defaultData = await Astro.glob('../../../members/_admin/info.js')
 var userDatas = await Astro.glob('../../../members/*/info.js')
 
 var userData = userDatas.find(data => {
+  if (!data) return false
   if (data.default) data = data.default
   return data.name.toLowerCase().includes(username)
 })
