--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -58,6 +58,7 @@ if (userData) {
 else userData = {}
 userData.portfolio = portfolios.find(p => p.username === username)
 if (!userData.portfolio) userData.portfolio = []
+console.log(username)
 userData = updateMember(userData)
 
 if (userData.status) {
