--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -31,7 +31,7 @@ export function getStaticPaths() {
         {params: {username: 'tyler'}}, 
         {params: {username: 'zach'}}, 
 
-        // {params: {username: 'default'}},
+        {params: {username: 'default'}},
         {params: {username: 'juhi'}}, 
         {params: {username: 'rien'}}, 
         {params: {username: 'sam'}}, 
