--- a/src/pages/[redirect].astro
+++ b/src/pages/[redirect].astro
@@ -44,7 +44,6 @@ if (redirect.length > 0) redirect = redirect[0]
 else redirect = def
 
 if (!redirect.mode) redirect.mode = 'page'
-if (redirect.mode !== 'frame') return Astro.redirect(redirect.dest)
 
 function getTitle(link) {
     if (link.startsWith('/')) link = link.slice(1)
@@ -63,7 +62,15 @@ function getTitle(link) {
 var title = getTitle(redirect.slug)
 
 ---
-<Layout title={title}>
+{redirect.mode === 'page' ? (<html>
+    <head>
+        <meta http-equiv="refresh" content={`5; url=${redirect.dest}`} />        
+        <script url={redirect.dest}>location.href = document.currentScript.getAttribute('url')</script>
+    </head>
+    <body>
+        Redirecting you to <a href={redirect.dest}>{redirect.dest}</a>.
+    </body>
+</html>) : (<Layout title={title}>
     <main id="content" class="frame-page">
         <iframe frameborder="0" src={redirect.dest} class="frame">
             Please click <a href={redirect.dest}>Here</a> to view the page!
@@ -74,4 +81,4 @@ var title = getTitle(redirect.slug)
             </script>
         </frame>
     </main>
-</Layout>
+</Layout>)}
