--- a/src/pages/[redirect].astro
+++ b/src/pages/[redirect].astro
@@ -70,8 +70,9 @@ var title = getTitle(redirect.slug)
     <body>
         Redirecting you to <a href={redirect.dest}>{redirect.dest}</a>.
     </body>
-</html>) : (/*<Layout title={title}>
-    <main id="content" class="frame-page">
+</html>) : (<Layout title={title}>
+</Layout>*)}
+    <!-- <main id="content" class="frame-page">
         <iframe frameborder="0" src={redirect.dest} class="frame">
             Please click <a href={redirect.dest}>Here</a> to view the page!
             <script is:inline dest={redirect.dest}>
@@ -80,5 +81,4 @@ var title = getTitle(redirect.slug)
                 location.replace(dest)
             </script>
         </frame>
-    </main>
-</Layout>*/'')}
+    </main> -->
