--- a/src/pages/[redirect].astro
+++ b/src/pages/[redirect].astro
@@ -65,14 +65,13 @@ var title = getTitle(redirect.slug)
 {redirect.mode === 'page' ? (<html>
     <head>
         <meta http-equiv="refresh" content={`0; url=${redirect.dest}`} />        
-        <script url={redirect.dest}>location.href = document.currentScript.getAttribute('url')</script>
+        <script url={redirect.dest} is:inlin>location.href = document.currentScript.getAttribute('url')</script>
     </head>
     <body>
         Redirecting you to <a href={redirect.dest}>{redirect.dest}</a>.
     </body>
 </html>) : (<Layout title={title}>
-</Layout>*)}
-    <!-- <main id="content" class="frame-page">
+    <main id="content" class="frame-page">
         <iframe frameborder="0" src={redirect.dest} class="frame">
             Please click <a href={redirect.dest}>Here</a> to view the page!
             <script is:inline dest={redirect.dest}>
@@ -81,4 +80,5 @@ var title = getTitle(redirect.slug)
                 location.replace(dest)
             </script>
         </frame>
-    </main> -->
+    </main>
+</Layout>)}
