--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -105,7 +105,7 @@ else userData.status = 'inactive'
                 {
                   userData.portfolio.map((photo) => {
                     <li>
-                      <img src={photo.src} title={photo.title} onclick={photo.onclick} />
+                      <img src={photo.file} title={photo.title || ''} onclick={photo.onclick || ''} />
                     </li>
                   })
                 }
