--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -101,8 +101,9 @@ else userData.status = 'inactive'
           <p class="bio" id="bio" set:html={userData.bio.result}></p>
           {
             (userData.status === 'active' && userData.portfolio.length > 0) ? 
-                <h2>Portfolio</h2>
-                <ul class="photos" style="height: auto; gap: 25px;">
+              <h2>Portfolio</h2>
+              <pre>{JSON.stringify(userData.portfolio, null, 4)}</pre>
+              <ul class="photos" style="height: auto; gap: 25px;">
                 {
                   userData.portfolio.map((photo) => {
                     <li>
