--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -102,13 +102,13 @@ else userData.status = 'inactive'
           {
             (userData.status === 'active' && userData.portfolio.length > 0) ? 
               <h2>Portfolio</h2>
-              <pre>{JSON.stringify(userData.portfolio, null, 4)}</pre>
               <ul class="photos" style="height: auto; gap: 25px;">
                 {
                   userData.portfolio.map((photo) => {
-                    <li>
-                      <LargeImage src={photo.file} alt={photo.title || ''} onclick={photo.onclick || ''} />
-                    </li>
+                    <pre>{JSON.stringify(photo, null, 4)}</pre>
+                    // <li>
+                    //   <LargeImage src={photo.file} alt={photo.title || ''} onclick={photo.onclick || ''} />
+                    // </li>
                   })
                 }
               </ul>
