--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -67,7 +67,7 @@ portfolioImgs.forEach((img, i) => {
     img.fullRes = fullRes[0]
   }
 
-  images[i] = img
+  portfolioImgs[i] = img
 })
 
 export function getStaticPaths() {
