--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -52,7 +52,7 @@ pImgs.map(img => {
 
     var name = getFNameNoExt(img.src)
 
-    var fullRes = fResS.filter(r => r === getFNameNoExt(img.src))
+    var fullRes = fResS.filter(r => getFNameNoExt(r) === getFNameNoExt(img.src))
     if (fullRes.length > 0) {
       obj.fullRes = fullRes[0]
     }
