--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -157,8 +157,9 @@ else userData.status = 'inactive'
               <ul class="photos" style="height: auto; gap: 25px;">
                 {
                   userData.portfolio.map(photo => {
+                    var file = photo.file
                     console.log('\n')
-                    var img = portfolioImgs.filter(i => getFNameNoExt(i.src) === photo.file)
+                    var img = portfolioImgs.filter(i => {console.log(getFNameNoExt(i.src); return false)})
                     return <pre>{JSON.stringify(img, null, 4)}</pre>
                     // <li>
                     //   <LargeImage src={photo.file} alt={photo.title || ''} onclick={photo.onclick || ''} />
