--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -159,7 +159,7 @@ else userData.status = 'inactive'
                   userData.portfolio.map(photo => {
                     var file = photo.file
                     console.log('\n')
-                    var img = portfolioImgs.filter(i => {console.log(getFNameNoExt(i.src); return false)})
+                    var img = portfolioImgs.filter(i => {console.log(getFNameNoExt(i.src)); return false})
                     return <pre>{JSON.stringify(img, null, 4)}</pre>
                     // <li>
                     //   <LargeImage src={photo.file} alt={photo.title || ''} onclick={photo.onclick || ''} />
