--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -70,10 +70,10 @@ function getFName(str) {
 }
 
 function getFNameNoExt(str) {
-    if (str.includes('/')) str = str.split('/').slice(-1)[0]
-    str = str.slice(0, -1*getFExt(str).length)
+  if (str.includes('/')) str = str.split('/').slice(-1)[0]
+  str = str.slice(0, -1*getFExt(str, 2).length)
 
-    return str
+  return str
 }
 
 function getFExt(str, level=1) {
