--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -27,10 +27,10 @@ function getFExt(str, level=1) {
   if (str.includes('.')) {
     switch (level) {
       case 1: 
-        str = str.split('.').slice(-1, -1).join('.')
+        str = str.split('.').slice(0, -1).join('.')
         break
       default: 
-        str = str.split('.').slice(-1*level, -1).join('.')
+        str = str.split('.').slice(0, -1*level).join('.')
         break
     }
   }
