--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -23,7 +23,7 @@ function getFNameNoExt(str) {
 
 function getFExt(str, level=1) {
   str = getFName(str)
-  if (level < 0) level *= =1
+  if (level < 0) level *= 1
   if (str.includes('.')) {
     switch (level) {
       case 1: 
