--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -15,7 +15,7 @@ function getFName(str) {
 }
 
 function getFNameNoExt(str) {
-  if (str.includes('/')) str = str.split('/').slice(-1)[0]
+  str = getFName(str)
   console.log(str)
   str = str.slice(0, -1*getFExt(str, 2).length)
 
@@ -54,7 +54,7 @@ pImgs.map(img => {
 
     var name = getFNameNoExt(img.src)
 
-    var fullRes = fResS.filter(r => getFNameNoExt(r) === getFNameNoExt(img.src))
+    var fullRes = fResS.filter(r => getFNameNoExt(decodeURIComponent(str)) === getFNameNoExt(img.src))
     if (fullRes.length > 0) {
       obj.fullRes = fullRes[0]
     }
@@ -160,7 +160,6 @@ else userData.status = 'inactive'
                 {
                   userData.portfolio.map(photo => {
                     var file = photo.file
-                    console.log('\n')
                     var img = portfolioImgs.filter(i => {getFNameNoExt(i.src); return false})
                     return <pre>{JSON.stringify(img, null, 4)}</pre>
                     // <li>
