--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -23,8 +23,8 @@ function getFNameNoExt(str) {
 
 function getFExt(str, level=1) {
   str = getFName(str)
-  console.log(str)
   if (level < 0) level *= 1
+  console.log(`${str}, ${level}`)
   if (str.includes('.')) {
     switch (level) {
       case 1: 
