--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -23,17 +23,10 @@ function getFNameNoExt(str) {
 
 function getFExt(str, level=1) {
   str = getFName(str)
-  if (level < 0) level *= 1
+  if (level > 0) level *= -1
   console.log(`${str}, ${level}`)
   if (str.includes('.')) {
-    switch (level) {
-      case 1: 
-        str = str.split('.').slice(0, -1).join('.')
-        break
-      default: 
-        str = str.split('.').slice(0, -1*level).join('.')
-        break
-    }
+    str = str.split('.').slice(0, level).join('.')
   }
   return str
 }
