--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -26,7 +26,13 @@ function getFExt(str, level=1) {
   if (level > 0) level *= -1
   console.log(`${str}, ${level}`)
   if (str.includes('.')) {
-    str = str.split('.').slice(0, level).join('.')
+    switch (level) {
+      case 0: 
+        break
+      default: 
+        str = str.split('.').slice(0, level).join('.')
+        break
+    }
   }
   return str
 }
