--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -24,7 +24,6 @@ function getFNameNoExt(str) {
 function getFExt(str, level=1) {
   str = getFName(str)
   if (level > 0) level *= -1
-  console.log(`${str}, ${level}`)
   if (str.includes('.')) {
     switch (level) {
       case 0: 
@@ -34,6 +33,7 @@ function getFExt(str, level=1) {
         break
     }
   }
+  console.log(str)
   return str
 }
 
