--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -77,18 +77,21 @@ function getFNameNoExt(str) {
 }
 
 function getFExt(str, level=1) {
-    str = getFName(str)
-    if (str.includes('.') && level > 0) {
-        switch (level) {
-            case 1: 
-                str = str.split('.').slice(-1, -1).join('.')
-                break
-            default: 
-                str = str.split('.').slice(-1*level, -1).join('.')
-                break
-        }
+  str = getFName(str)
+  if (level > 0) level *= -1
+  if (str.includes('.')) {
+    str = str.split('.')
+    switch (level) {
+      case 0: 
+        break
+      default: 
+        str = str.slice(level)
+        break
     }
-    return str
+    str = str.join('.')
+  }
+  console.log(str)
+  return str
 }
 
 function toProper(user) {
