--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -17,7 +17,6 @@ function getFName(str) {
 function getFNameNoExt(str) {
   str = getFName(str)
   str = str.slice(0, -1*getFExt(str, 2).length)
-  console.log(str)
 
   return str
 }
@@ -161,6 +160,7 @@ else userData.status = 'inactive'
                 {
                   userData.portfolio.map(photo => {
                     var file = photo.file
+                    console.log(file)
                     var img = portfolioImgs.filter(i => {getFNameNoExt(i.src); return false})
                     return <pre>{JSON.stringify(img, null, 4)}</pre>
                     // <li>
