--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -14,9 +14,9 @@ function getFName(str) {
   return str
 }
 
-function getFNameNoExt(str) {
+function getFNameNoExt(str, level) {
   str = getFName(str)
-  str = str.slice(0, -1*getFExt(str, 2).length)
+  str = str.slice(0, -1*getFExt(str, level).length)
 
   return str
 }
@@ -165,7 +165,7 @@ else userData.status = 'inactive'
                     }
                     else file = getFNameNoExt(file)
                     console.log(file)
-                    var img = portfolioImgs.filter(i => {console.log(`${decodeURIComponent(getFNameNoExt(i.src))} === ${file}`); return false})
+                    var img = portfolioImgs.filter(i => {console.log(`${decodeURIComponent(getFNameNoExt(i.src, 2))} === ${file}`); return false})
                     return <pre>{JSON.stringify(img, null, 4)}</pre>
                     // <li>
                     //   <LargeImage src={photo.file} alt={photo.title || ''} onclick={photo.onclick || ''} />
