--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -164,8 +164,7 @@ else userData.status = 'inactive'
                       return ''
                     }
                     else file = getFNameNoExt(file)
-                    console.log(file)
-                    var img = portfolioImgs.filter(i => {console.log(`${decodeURIComponent(getFNameNoExt(i.src, 2))} === ${file}`); return false})
+                    var img = portfolioImgs.filter(i => decodeURIComponent(getFNameNoExt(i.src, 2)) === file)
                     return <pre>{JSON.stringify(img, null, 4)}</pre>
                     // <li>
                     //   <LargeImage src={photo.file} alt={photo.title || ''} onclick={photo.onclick || ''} />
