--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -165,10 +165,9 @@ else userData.status = 'inactive'
                     }
                     else file = getFNameNoExt(file)
                     var img = portfolioImgs.filter(i => decodeURIComponent(getFNameNoExt(i.src, 2)) === file)
-                    return <pre>{JSON.stringify(img, null, 4)}</pre>
-                    // <li>
-                    //   <LargeImage src={photo.file} alt={photo.title || ''} onclick={photo.onclick || ''} />
-                    // </li>
+                    <li>
+                      <LargeImage src={photo.src} alt={photo.title || ''} onclick={photo.onclick || ''} />
+                    </li>
                   })
                 }
               </ul>
