--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -165,9 +165,11 @@ else userData.status = 'inactive'
                     }
                     else file = getFNameNoExt(file)
                     var img = portfolioImgs.filter(i => decodeURIComponent(getFNameNoExt(i.src, 2)) === file)
-                    <li>
-                      <LargeImage src={img.src} alt={`${file} by ${firstName(userData.name)}`} draggable={false} />
-                    </li>
+                    return (
+                      <li>
+                        <LargeImage src={img.src} alt={`${file} by ${firstName(userData.name)}`} draggable={false} />
+                      </li>
+                    )
                   })
                 }
               </ul>
