--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -165,12 +165,12 @@ else userData.status = 'inactive'
                     }
                     else file = getFNameNoExt(file)
                     var img = portfolioImgs.filter(i => decodeURIComponent(getFNameNoExt(i.src, 2)) === file)
-                    return (
-                      <li>
-                        <pre>{img.src}</pre>
-                      </li>
-                    )
-                      // <LargeImage src={img.src} alt={`${file} by ${firstName(userData.name)}`} draggable={false} />
+                    return <pre>{img.src}</pre>
+                    // return (
+                    //   <li>
+                    //     <LargeImage src={img.src} alt={`${file} by ${firstName(userData.name)}`} draggable={false} />
+                    //   </li>
+                    // )
                   })
                 }
               </ul>
