--- a/src/styles/components/largeImage.scss
+++ b/src/styles/components/largeImage.scss
@@ -47,6 +47,7 @@ html:has(.img-parent > input[type="checkbox"]:checked) {
                 background-color: var(--bg-color);
             }
             > img {
+                margin: auto;
                 max-height: 100%;
                 max-width: 100%;
                 // background-image: var(--bg);
