--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -18,8 +18,8 @@ var members = [
         fullRes: [], 
     }, 
     {
-        username: 'juhi', 
-        imgs: await Astro.glob('../../../members/juhi/portfolio/*'), 
+        username: 'tyler', 
+        imgs: await Astro.glob('../../../members/tyler/portfolio/*'), 
         fullRes: [], 
     }, 
     {
